--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.41.5",
+    "sharp": "^0.31.3",
     "surrealdb.js": "^0.5.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "4.9.4"
